commit con errore

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@ else if (Model is DipendenteViewModel || @Accessor.HttpContext.Session.GetString
                    <img src="~/immagini/hrnexus-high-resolution-logo-transparent.png" alt="Logo">
                 </a>
             </div>
-            <a asp-action="RichiestaAssenze" asp-controller="Dipendente">Gestione
+            <a asp-action="RichiesteAssenza" asp-controller="Dipendente">Gestione
                 <br>
                 Assenze
             </a>
